--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
 management.endpoints.web.base-path=/
-management.endpoints.web.path-mapping.prometheus=/metric
+management.endpoints.web.path-mapping.prometheus=/metrics
 
 
 info.app.name=Spring webbapplication template
