--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8080
 
 management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=metrics
 management.info.env.enabled=true
 
 management.endpoints.web.base-path=/
